# celery_test

./: docker-compose.yml  pyproject.toml  requirement.txt
celery_test/: celery_app.py  main.py  schema.py  tasks.py
deployment/: backend.dockerfile  worker.dockerfile
scripts/: start_flower.sh  start_worker.sh
tests/: test_celery_test.py
