[tool.poetry]
name = "celery_test"
version = "0.1.0"
description = ""
authors = ["lemon <lp951195660@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "4.4.7"
flower = "^0.9.7"
redis = "^3.5.3"
fastapi = "^0.65.1"
uvicorn = "^0.14.0"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.24.1"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
